47
================

09/08/23 Option to enable thumbnails in clinic screens #1259
09/08/23 Advanced find animal: Seach on diet #1313
09/08/23 Advanced find animal: Search on jurisdiction #1267
09/08/23 Allow paperwork generation to be disabled #1316
07/08/23 Allow additional fields to be hidden #598
07/08/23 Low stock level alerts #954
06/08/23 Merge person on email/cell checks first name field to avoid false positives
05/08/23 Hide the CSV import delete database option for large databases
05/08/23 Fix bug where reserves with move date but no animal could NPE during validation
04/08/23 Audit when document templates are edited, include name on audits
04/08/23 Default stock unit price during give of vacc/test #441
04/08/23 CSV import option to override animal entry date to today
03/08/23 New Move->Adopt option to generate and request signed paperwork #1231
03/08/23 Adoption contracts via checkout should use new link to animal/person
02/08/23 Fix error generating animal docs with a broken preferred image
02/08/23 Add warning of app retirement to smartphone UI as well #1096
02/08/23 Implement incident and log functions in new mobile interface #1096
02/08/23 Limit datepicker to today when giving tests/vaccinations
01/08/23 Remove people with only a cancelled reserve after X years #1239
01/08/23 Show an icon to indicate a form is for an existing person #1308
01/08/23 Fix client side validation of boarding dates/times
31/07/23 Remove animal media X years after animal leaves/dies #1254
31/07/23 PetRescue: Option to use adoption coordinator contact info #1314
31/07/23 Add form field to indicate merge person, create without merge option #1308
25/07/23 Use CSS3 DnD grab/grabbing cursors when dragging and dropping in shelterview
25/07/23 Allow diet to be added as a column to find animal results
24/07/23 Warn when adopting animal with reservations to person without reserve #1278
24/07/23 Add extra emblems (orange/brown square/circle, soccer ball, lightning)